Adding host to config

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gmail-tailwind-vue",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
